# openweights

./: .dockerignore  .env.example  .env.worker.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER_README.md  Dockerfile  Dockerfile.cluster  Dockerfile.prime-rl  Dockerfile.vllm  LLM.md  README.md  entrypoint.cluster.sh  entrypoint.sh  fetch_events.py  llm.txt  llm_dot_txt.py  llm_full.txt  ow-default.Dockerfile  pyproject.toml  run_integration_tests.sh  todo.md
cookbook/: README.md  SWEEPS.md
cookbook/custom_job/: README.md  client_side.py
cookbook/inference/: qwen36_inference.py
cookbook/preference_learning/: llama3_dpo.py  llama3_orpo.py
cookbook/prime_rl/: run_toy_job.py  toy_env.py  toy_rl.toml
cookbook/rl/: reverse_text_rl.py
cookbook/sdft/: sdft_qwen3_4b.py  test_grpo_smoke.py  test_sdft_vs_sft.py  test_smoke_ngram_vllm.py
cookbook/sft/: logprob_tracking.py  lora_gemma3_4b.py  lora_olmo3_7b.py  lora_qwen3_4b.py  lora_qwen3_5_0_8b.py  lora_qwen3_5_35b_a3b.py  multi_gpu_llama3_70b.py  qlora_llama3_70b.py  sampling_callback.py  token_level_weighted_sft.py
docs/: finetuning.md  local_execution.md  ttl.md
example/: sft_custom_example.py  ui.py  unsloth_custom_example.py  unsloth_grpo_example.py  unsloth_local_example.py
openweights/: __init__.py  images.py
openweights/cli/: README.md  __init__.py  cluster.py  common.py  deploy.py  env.py  exec.py  signup.py  ssh.py  worker.py
supabase/: 20250116_dump.sql  seed.sql
tests/: gpu_compatibility_check.py  test_chat_template_spans.py  test_custom_trainer_full.py  test_custom_trainer_loss_fix.py  test_custom_trainer_standalone.py  test_first_tried_gpu_allocation.py  test_inference_cli_deferred_imports.py  test_integration.py  test_remove_broken_rl_import.py  test_runpod_hardware_registry.py  test_sampling_callback.py  test_support_cloud_types.py  test_support_vram_none.py  test_validation.py  test_weighted_sft_compat.py  test_worker_process_race_condition.py
(+189 files in other folders)
