[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openweights"
version = "0.10.1"
description = "An openai-like sdk for finetuning and batch inference"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "supabase==2.15.3",
    "python-dotenv",
    "httpx>=0.24.0",
    "fire",
    "runpod",
    "PyJWT",
    "fastapi",
    "uvicorn",
    "openai",
    "huggingface-hub",
    "diskcache",
    "scp",
    "httpx[http2]",
    "ipython>=9.3.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.3",
    "cachier",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black",
    "isort",
    "pre-commit",
]
# Legacy aggregate worker extra kept for compatibility. New image-specific
# extras below better reflect the split worker architecture in v0.10.
worker = [
    "torch>=2.7.1",
    "transformers>=5,<6",
    "unsloth>=2025.1",
    "tokenizers>=0.21.1",
    "datasets>=3.6.0",
    "trl>=0.23,<1",
    "peft>=0.18.1",
    "bitsandbytes>=0.49.1",
    "huggingface-hub>=1.0",
    "mergekit>=0.1.4",
    "llm-blender>=0.0.2",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "immutables==0.21",
]
worker-unsloth = [
    "torch>=2.7.1",
    "unsloth>=2025.1",
    "tokenizers>=0.21.1",
    "datasets>=3.6.0",
    "trl>=0.23,<1",
    "peft>=0.18.1",
    "bitsandbytes>=0.49.1",
    "huggingface-hub>=1.0",
    "hf_transfer",
    "mergekit>=0.1.4",
    "llm-blender>=0.0.2",
]
worker-vllm = [
    "torch>=2.7.1",
    "transformers>=5,<6",
    "vllm>=0.19.1",
    "tokenizers>=0.21.1",
    "datasets>=3.6.0",
    "trl>=0.23,<1",
    "peft>=0.18.1",
    "bitsandbytes>=0.49.1",
    "huggingface-hub>=1.0",
    "hf_transfer",
]
[project.scripts]
ow = "openweights.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["openweights"]
